Modifiche a print preview file ac2

--- a/Private_home_accounting/iu_huishouden.ac2.html
+++ b/Private_home_accounting/iu_huishouden.ac2.html
@@ -1,7 +1,7 @@
 <div class='ac2preview accountingproperties'><p>Gezin de Wilt</p>
 <p>Boekhouding 2018</p>
 <p>Basisvaluta: EUR</p>
-<p>Boekhouding inkomsten & uitgaven</p>
+<p>Boekhouding inkomsten uitgaven</p>
 </div><table class='ac2preview'><caption>Rekeningen</caption><tr>
 <th>Groep</th>
 <th>Rekening</th>
