Aggiornato html preview

--- a/Private_home_accounting/iu_huishouden.ac2.html
+++ b/Private_home_accounting/iu_huishouden.ac2.html
@@ -1,193 +1,50 @@
-<div class='ac2preview accountingproperties'><p>Gezin de Wilt</p>
-<p>Boekhouding 2018</p>
-<p>Basisvaluta: EUR</p>
-<p>Boekhouding inkomsten uitgaven</p>
-</div><table class='ac2preview'><caption>Rekeningen</caption><tr>
-<th>Groep</th>
-<th>Rekening</th>
-<th>Beschrijving</th>
+<div class='ac2preview accountingproperties'><p>Bar Luca's</p>
+<p>Basic Currency: .</p>
+<p>Double-entry</p>
+</div><table class='ac2preview'><caption>Accounts</caption><tr>
+<th>Group</th>
+<th>Account</th>
+<th>Description</th>
 <th>Gr</th>
 </tr>
 <tr><td>&nbsp;</td>
 <td>&nbsp;</td>
-<td>VERMOGEN</td>
+<td>BALANCE SHEET</td>
 <td>&nbsp;</td>
 </tr>
 <tr><td>&nbsp;</td>
 <td>&nbsp;</td>
+<td>ASSETS</td>
 <td>&nbsp;</td>
-<td>&nbsp;</td>
 </tr>
 <tr><td>&nbsp;</td>
-<td>100</td>
-<td>Contanten</td>
+<td>CASH</td>
+<td>Cash on hand</td>
 <td>1</td>
 </tr>
 <tr><td>&nbsp;</td>
-<td>101</td>
-<td>Rekening ING</td>
+<td>BANK</td>
+<td>Bank account</td>
 <td>1</td>
 </tr>
 <tr><td>&nbsp;</td>
-<td>102</td>
-<td>Rekening Rabobank</td>
+<td>CUSTOMERS</td>
+<td>Customers account</td>
 <td>1</td>
 </tr>
 <tr><td>&nbsp;</td>
-<td>103</td>
-<td>Spaarrekening ING</td>
+<td>FURNITURE</td>
+<td>Furniture</td>
 <td>1</td>
 </tr>
 <tr><td>&nbsp;</td>
-<td>104</td>
-<td>Spaarrekening Rabobank</td>
+<td>INVENTORY</td>
+<td>Inventory</td>
 <td>1</td>
-</tr>
-<tr><td>&nbsp;</td>
-<td>110</td>
-<td>Aandelen</td>
-<td>1</td>
-</tr>
-<tr><td>&nbsp;</td>
-<td>120</td>
-<td>Onroerend goed</td>
-<td>1</td>
-</tr>
-<tr><td>&nbsp;</td>
-<td>210</td>
-<td>Hypotheek</td>
-<td>1</td>
-</tr>
-<tr><td>&nbsp;</td>
-<td>280</td>
-<td>Banklening</td>
-<td>1</td>
-</tr>
-<tr><td>&nbsp;</td>
-<td>&nbsp;</td>
-<td>&nbsp;</td>
-<td>&nbsp;</td>
 </tr>
 <tr><td>1</td>
 <td>&nbsp;</td>
-<td>TOTAAL</td>
-<td>&nbsp;</td>
-</tr>
-<tr><td>&nbsp;</td>
-<td>&nbsp;</td>
-<td>&nbsp;</td>
-<td>&nbsp;</td>
-</tr>
-</table>
-<table class='ac2preview'><caption>Categorieën</caption><tr>
-<th>Groep</th>
-<th>Categorie</th>
-<th>Beschrijving</th>
-<th>Gr</th>
-</tr>
-<tr><td>&nbsp;</td>
-<td>&nbsp;</td>
-<td>RESULTAAT</td>
-<td>&nbsp;</td>
-</tr>
-<tr><td>&nbsp;</td>
-<td>&nbsp;</td>
-<td>&nbsp;</td>
-<td>&nbsp;</td>
-</tr>
-<tr><td>&nbsp;</td>
-<td>&nbsp;</td>
-<td>UITGAVEN</td>
-<td>&nbsp;</td>
-</tr>
-<tr><td>&nbsp;</td>
-<td>300</td>
-<td>Hypotheek-rente</td>
-<td>3</td>
-</tr>
-<tr><td>&nbsp;</td>
-<td>301</td>
-<td>Internet, telefoon, TV</td>
-<td>3</td>
-</tr>
-<tr><td>&nbsp;</td>
-<td>302</td>
-<td>Electriciteit en gas</td>
-<td>3</td>
-</tr>
-<tr><td>&nbsp;</td>
-<td>303</td>
-<td>Water</td>
-<td>3</td>
-</tr>
-<tr><td>&nbsp;</td>
-<td>304</td>
-<td>Onderhoud</td>
-<td>3</td>
-</tr>
-<tr><td>&nbsp;</td>
-<td>305</td>
-<td>Verzekering huis</td>
-<td>3</td>
-</tr>
-<tr><td>&nbsp;</td>
-<td>306</td>
-<td>Gemeentelijke belastingen</td>
-<td>3</td>
-</tr>
-<tr><td>&nbsp;</td>
-<td>&nbsp;</td>
-<td>&nbsp;</td>
-<td>&nbsp;</td>
-</tr>
-<tr><td>&nbsp;</td>
-<td>&nbsp;</td>
-<td>Persoonlijke uitgaven</td>
-<td>&nbsp;</td>
-</tr>
-<tr><td>&nbsp;</td>
-<td>310</td>
-<td>Voeding, enz.</td>
-<td>3</td>
-</tr>
-<tr><td>&nbsp;</td>
-<td>311</td>
-<td>Kleding en persoonlijke verzorging</td>
-<td>3</td>
-</tr>
-<tr><td>&nbsp;</td>
-<td>312</td>
-<td>Vervoer (auto, fiets, enz)</td>
-<td>3</td>
-</tr>
-<tr><td>&nbsp;</td>
-<td>313</td>
-<td>Kosten bankrekeningen</td>
-<td>3</td>
-</tr>
-<tr><td>&nbsp;</td>
-<td>314</td>
-<td>Verzekeringen</td>
-<td>3</td>
-</tr>
-<tr><td>&nbsp;</td>
-<td>315</td>
-<td>Belastingen</td>
-<td>3</td>
-</tr>
-<tr><td>&nbsp;</td>
-<td>316</td>
-<td>Reizen, vakanties</td>
-<td>3</td>
-</tr>
-<tr><td>&nbsp;</td>
-<td>&nbsp;</td>
-<td>&nbsp;</td>
-<td>&nbsp;</td>
-</tr>
-<tr><td>3</td>
-<td>&nbsp;</td>
-<td>TOTAAL UITGAVEN</td>
+<td>TOTAL ASSETS</td>
 <td>00</td>
 </tr>
 <tr><td>&nbsp;</td>
@@ -197,33 +54,118 @@
 </tr>
 <tr><td>&nbsp;</td>
 <td>&nbsp;</td>
-<td>INKOMSTEN</td>
+<td>LIABILITIES AND EQUITY</td>
 <td>&nbsp;</td>
 </tr>
 <tr><td>&nbsp;</td>
-<td>400</td>
-<td>Salaris, andere inkomsten</td>
+<td>SUPPLIERS</td>
+<td>Suppliers</td>
+<td>2</td>
+</tr>
+<tr><td>&nbsp;</td>
+<td>LOAN</td>
+<td>Loan</td>
+<td>2</td>
+</tr>
+<tr><td>&nbsp;</td>
+<td>EQUITY</td>
+<td>Owner equity</td>
+<td>2</td>
+</tr>
+<tr><td>PL</td>
+<td>&nbsp;</td>
+<td>Profit(-) or loss (+) from current year</td>
+<td>2</td>
+</tr>
+<tr><td>2</td>
+<td>&nbsp;</td>
+<td>TOTAL LIABILITIES AND EQUITY</td>
+<td>00</td>
+</tr>
+<tr><td>&nbsp;</td>
+<td>&nbsp;</td>
+<td>&nbsp;</td>
+<td>&nbsp;</td>
+</tr>
+<tr><td>&nbsp;</td>
+<td>&nbsp;</td>
+<td>PROFIT AND LOSS STATEMENT</td>
+<td>&nbsp;</td>
+</tr>
+<tr><td>&nbsp;</td>
+<td>&nbsp;</td>
+<td>INCOME</td>
+<td>&nbsp;</td>
+</tr>
+<tr><td>&nbsp;</td>
+<td>SALES</td>
+<td>Income from sales</td>
 <td>4</td>
 </tr>
 <tr><td>&nbsp;</td>
-<td>401</td>
-<td>Rente van bank- en girorekening</td>
+<td>INTINC</td>
+<td>Interest income</td>
 <td>4</td>
-</tr>
-<tr><td>&nbsp;</td>
-<td>402</td>
-<td>Andere inkomsten</td>
-<td>4</td>
-</tr>
-<tr><td>&nbsp;</td>
-<td>&nbsp;</td>
-<td>&nbsp;</td>
-<td>&nbsp;</td>
 </tr>
 <tr><td>4</td>
 <td>&nbsp;</td>
-<td>TOTALE INKOMSTEN</td>
-<td>00</td>
+<td>TOTAL INCOME</td>
+<td>02</td>
+</tr>
+<tr><td>&nbsp;</td>
+<td>&nbsp;</td>
+<td>&nbsp;</td>
+<td>&nbsp;</td>
+</tr>
+<tr><td>&nbsp;</td>
+<td>&nbsp;</td>
+<td>EXPENSES</td>
+<td>&nbsp;</td>
+</tr>
+<tr><td>&nbsp;</td>
+<td>PERSON</td>
+<td>Personnel expenses</td>
+<td>3</td>
+</tr>
+<tr><td>&nbsp;</td>
+<td>GOODS</td>
+<td>Cost of goods</td>
+<td>3</td>
+</tr>
+<tr><td>&nbsp;</td>
+<td>RENTAL</td>
+<td>Rental and related expenses</td>
+<td>3</td>
+</tr>
+<tr><td>&nbsp;</td>
+<td>ADMIN</td>
+<td>Administrative costs</td>
+<td>3</td>
+</tr>
+<tr><td>&nbsp;</td>
+<td>INTEXP</td>
+<td>Interest expense</td>
+<td>3</td>
+</tr>
+<tr><td>&nbsp;</td>
+<td>DEPREC</td>
+<td>Depreciation</td>
+<td>3</td>
+</tr>
+<tr><td>3</td>
+<td>&nbsp;</td>
+<td>TOTAL EXPENSES</td>
+<td>02</td>
+</tr>
+<tr><td>&nbsp;</td>
+<td>&nbsp;</td>
+<td>&nbsp;</td>
+<td>&nbsp;</td>
+</tr>
+<tr><td>02</td>
+<td>&nbsp;</td>
+<td>Profit(-) Loss(+) from Profit and Loss Statement</td>
+<td>PL</td>
 </tr>
 <tr><td>&nbsp;</td>
 <td>&nbsp;</td>
@@ -232,37 +174,7 @@
 </tr>
 <tr><td>00</td>
 <td>&nbsp;</td>
-<td>TOTAAL</td>
-<td>&nbsp;</td>
-</tr>
-<tr><td>&nbsp;</td>
-<td>&nbsp;</td>
-<td>&nbsp;</td>
-<td>&nbsp;</td>
-</tr>
-<tr><td>&nbsp;</td>
-<td>&nbsp;</td>
-<td>&nbsp;</td>
-<td>&nbsp;</td>
-</tr>
-<tr><td>&nbsp;</td>
-<td>&nbsp;</td>
-<td>&nbsp;</td>
-<td>&nbsp;</td>
-</tr>
-<tr><td>&nbsp;</td>
-<td>&nbsp;</td>
-<td>&nbsp;</td>
-<td>&nbsp;</td>
-</tr>
-<tr><td>&nbsp;</td>
-<td>&nbsp;</td>
-<td>&nbsp;</td>
-<td>&nbsp;</td>
-</tr>
-<tr><td>&nbsp;</td>
-<td>&nbsp;</td>
-<td>&nbsp;</td>
+<td>Difference should be zero (void)</td>
 <td>&nbsp;</td>
 </tr>
 <tr><td>&nbsp;</td>
